--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -14,7 +14,7 @@ jobs:
         config:
           - {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
-          - {os: ubuntu-20.10,   r: 'release'}
+          - {os: ubuntu-latest,   r: 'release'}
 
     steps:
       - uses: actions/checkout@v2
