--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -25,10 +25,14 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@master
 
+      - name: Install system dependencies
+        run: |
+          apt-get install libcurl
+
       - name: Install dependencies
         run: |
           install.packages("remotes")
-          remotes::install_cran(c("V8", "jsonlite", "boot", "MASS"), dependencies=TRUE)
+          remotes::install_cran(c("V8", "jsonlite", "boot", "MASS", "knitr", "lavaan", "testthat"), dependencies=TRUE)
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
