--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -26,8 +26,9 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@master
 
       - name: Install system dependencies
+        if: runner.os == 'Linux'
         run: |
-          apt-get install libcurl
+          sudo apt-get install libcurl
 
       - name: Install dependencies
         run: |
