--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -21,14 +21,14 @@ jobs:
 
       - uses: r-lib/actions/setup-r@master
         with:
-          r-version: 'release'
+          r-version: ${{ matrix.config.r }}
 
       - uses: r-lib/actions/setup-pandoc@master
 
       - name: Install system dependencies
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get install libcurl
+          sudo apt-get install libcurl-dev
 
       - name: Install dependencies
         run: |
