--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Install system dependencies
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get install curl
+          sudo apt-get install libcurl4-openssl-dev
 
       - name: Install dependencies
         run: |
