--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -29,10 +29,15 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@master
 
-      - name: Install system dependencies
+      - name: Install system dependencies for Mac
+        if: runner.os == 'macOS'
+        run: |
+          brew cask install mactex
+
+      - name: Install system dependencies for Linux
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get install libcurl4-openssl-dev libv8-dev
+          sudo apt-get install libcurl4-openssl-dev libv8-dev texlive-latex-base
 
       - name: Install dependencies
         run: |
