--- a/.github/workflows/check-full.yaml
+++ b/.github/workflows/check-full.yaml
@@ -29,22 +29,10 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@master
       
-      - name: Install system dependencies for Mac
-        if: runner.os == 'windows'
-        run: |
-          wget https://miktex.org/download/win/miktexsetup-x64.zip
-          unzip miktexsetup-x64.zip
-          miktexsetup --verbose --local-package-repository=C:\temp\miktex --package-set=complete download
-
-      - name: Install system dependencies for Mac
-        if: runner.os == 'macOS'
-        run: |
-          brew cask install mactex
-
       - name: Install system dependencies for Linux
         if: runner.os == 'Linux'
         run: |
-          sudo apt-get install libcurl4-openssl-dev libv8-dev texlive-latex-base
+          sudo apt-get install libcurl4-openssl-dev libv8-dev
 
       - name: Install dependencies
         run: |
@@ -61,9 +49,8 @@ jobs:
         shell: Rscript {0}
 
       - name: Check
-        env:
-          _R_CHECK_CRAN_INCOMING_: false
-        run: rcmdcheck::rcmdcheck("r", args = c("--as-cran"), error_on = "warning", check_dir = "check")
+        run: |
+          rcmdcheck::rcmdcheck("r", args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
         shell: Rscript {0}
 
       - name: Show testthat output
